fixed unknown gap issues. Added all the products into json file. Now, app is good to go.

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 .a4{
     width: 8.3in;
+    height: fit-content;
 }
 .a5{
     width: 5.8in;
+    height: fit-content;
 }
